improve documentation